 378.	[func]		named and lwresd will log the command line arguments
			they were started with in the "starting ..." message.

 377.	[bug]		When additional data lookups were refused due to 
			"allow-query", the databases were still being
			attached causing reference leaks.

 376.	[bug]		The server should always use good entropy when
			performing cryptographic functions needing entropy.

 375.	[bug]		Per-zone "allow-query" did not properly override the
			view/global one for CNAME targets and additional
			data [RT #220].

 374.	[bug]		SOA in authoritative negative responses had wrong TTL.

 373.	[func]		nslookup is now installed by "make install".

 372.	[bug]		Deal with Microsoft DNS servers appending two bytes of
			garbage to zone transfer requests.

 371.	[bug]		At high debug levels, doing an outgoing zone transfer
			of a very large RRset could cause an assertion failure
			during logging.

 370.	[bug]		The error messages for rollforward failures were
			overly terse.

 369.	[func]		Support new named.conf options, view and zone 
			statements: 

				max-retry-time, min-retry-time, 
				max-refresh-time, min-refresh-time, max-names.

 368.	[func]		Restructure the internal ".bind" view so that more
			zones can be added to it.

 367.	[bug]		Allow proper selection of server on nslookup command
			line.

 366.	[func]		Allow use of '-' batch file in dig for stdin.

 365.	[bug]		nsupdate -k leaked memory.

 364.	[func]		Added additional-from-{cache,auth}

 362.	[bug]		rndc no longer aborts if the configuration file is
			missing an options statement. [RT #209]

 361.	[func]		When the RBT find or chain functions set the name and
			origin for a node that stores the root label
			the name is now set to an empty name, instead of ".",
			to simplify later use of the name and origin by
			dns_name_concatenate(), dns_name_totext() or
			dns_name_format().

 360.	[func]		dns_name_totext() and dns_name_format() now allow