@@ -1,3 +1,5 @@
+ 379.	[func]		New library function isc_sockaddr_anyofpf().
+
  378.	[func]		named and lwresd will log the command line arguments
 			they were started with in the "starting ..." message.
 
